--- a/cl2020.html
+++ b/cl2020.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-<title>練習その5</title>
+<title>ノートパソコンLenovo ideapad L340について</title>
 </head>
 <body>
-<h2>画像の張り付け方</h2>
-    この下に画像を表示します。
+<h2>Lenovo ideapad L340</h2>
+   Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。
+    この機種の画像を下に張り付けておく。
 <p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT7mt5RzvClOopV5Y66DsqFcnuYCx82bLYkHqhlD5Ly5Ym_tcnw&usqp=CAU">
 </p>
-<p>高知工科大学</p>
+ <h3>Lenovoとは</h3>    
 </body>
 </html>
