--- a/cl2020.html
+++ b/cl2020.html
@@ -9,6 +9,8 @@
 <p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT7mt5RzvClOopV5Y66DsqFcnuYCx82bLYkHqhlD5Ly5Ym_tcnw&usqp=CAU">
 </p>
- <h3>Lenovoとは</h3>    
+   <hr>
+ <h3>Lenovoとは</h3>
+   Lenovo社という名前を聞いたことのある人もいるだろう。ここでは聞いたことのない人のために紹介させてもらう。
 </body>
 </html>
