--- a/cl2020.html
+++ b/cl2020.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h2>Lenovo ideapad L340</h2>
-   Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。
+   Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。<br/>
     この機種の画像を下に張り付けておく。
    <body>
 <p>
