--- a/cl2020.html
+++ b/cl2020.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 <h2>Lenovo ideapad L340</h2>
-   Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。<br/>
-    この機種の画像を下に張り付けておく。
+   Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。<br>
+   <p> この機種の画像を下に張り付けておく。</p>
    <body>
 <p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT7mt5RzvClOopV5Y66DsqFcnuYCx82bLYkHqhlD5Ly5Ym_tcnw&usqp=CAU">
