--- a/cl2020.html
+++ b/cl2020.html
@@ -14,5 +14,9 @@
  <h3>Lenovoとは</h3>
  <body>
    Lenovo社という名前を聞いたことのある人もいるだろう。ここでは聞いたことのない人のために紹介させてもらう。
+<br>Lenovo社は、香港に本社を置くパーソナルコンピュータ（PC）メーカーである。PCだけでなく、スマートフォンやタブレットも開発している。
+<br>主な製品は、ThinkPadやideapadなどのノートパソコンが主である。
+    <br><A href="https://ja.wikipedia.org/wiki/ThinkPad/">ThinkPad</A>に関してはWikipediaへのリンクを乗せておくのでThinkPadの文字を
+    <br>クリックしてみてみてくれるといいだろう。ここからはideapadについて話していこう。
 </body>
 </html>
