--- a/cl2020.html
+++ b/cl2020.html
@@ -6,13 +6,13 @@
 <h2>Lenovo ideapad L340</h2>
    Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。
    <br>この機種の画像を下に張り付けておく。
-   <body>
+   </body>
 <p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT7mt5RzvClOopV5Y66DsqFcnuYCx82bLYkHqhlD5Ly5Ym_tcnw&usqp=CAU">
 </p>
    <hr>
+   <body>
  <h3>Lenovoとは</h3>
- <body>
    Lenovo社という名前を聞いたことのある人もいるだろう。ここでは聞いたことのない人のために紹介させてもらう。
 <br>Lenovo社は、香港に本社を置くパーソナルコンピュータ（PC）メーカーである。PCだけでなく、スマートフォンやタブレットも開発している。
 <br>主な製品は、ThinkPadやideapadなどのノートパソコンが主である。
