--- a/cl2020.html
+++ b/cl2020.html
@@ -16,7 +16,7 @@
    Lenovo社という名前を聞いたことのある人もいるだろう。ここでは聞いたことのない人のために紹介させてもらう。
 <br>Lenovo社は、香港に本社を置くパーソナルコンピュータ（PC）メーカーである。PCだけでなく、スマートフォンやタブレットも開発している。
 <br>主な製品は、ThinkPadやideapadなどのノートパソコンが主である。
-    <br><A href="https://ja.wikipedia.org/wiki/ThinkPad/">ThinkPad</A>に関してはWikipediaへのリンクを乗せておくのでThinkPadの文字を
+    <br><A href="https://ja.wikipedia.org/wiki/ThinkPad">ThinkPad</A>に関してはWikipediaへのリンクを乗せておくのでThinkPadの文字を
     <br>クリックしてみてみてくれるといいだろう。ここからはideapadについて話していこう。
 </body>
 </html>
