--- a/cl2020.html
+++ b/cl2020.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h2>Lenovo ideapad L340</h2>
-   Lenovo社の最新機種のノートパソコン「ideapad L340」を買ってみたので簡単なレビューをしよう。
+   最近はじめてパソコンを買った。それがLenovo社のノートパソコン「ideapad L340」である。このパソコンを使ってみて興味を持ったので紹介しようと思う。
    <br>この機種の画像を下に張り付けておく。
    </body>
 <p>
@@ -17,6 +17,15 @@
 <br>Lenovo社は、香港に本社を置くパーソナルコンピュータ（PC）メーカーである。PCだけでなく、スマートフォンやタブレットも開発している。
 <br>主な製品は、ThinkPadやideapadなどのノートパソコンが主である。
     <br><A href="https://ja.wikipedia.org/wiki/ThinkPad">ThinkPad</A>に関してはWikipediaへのリンクを乗せておくのでThinkPadの文字を
-    <br>クリックしてみてみてくれるといいだろう。ここからはideapadについて話していこう。
+    <br>クリックしてみてみてくれるといいだろう。ここからはideapadL340について話していこう。
 </body>
+   <hr>
+   <body>
+      <h4>ideapadL340とは</h4>
+      LenovoL340の特徴としては、仕事もゲームもこの１台でこなせるオールラウンダーということだろう。特にゲーミングに特化しており、高いグラフィック性能と
+ <br>処理能力を兼ね備える、AMD RyzenプロセッサーやSSDを搭載している。また、Dolby Audioステレオスピーカー搭載で、映画や音楽鑑賞にもピッタリ、そして、
+ <br>HDカメラ搭載で、プライバシーシャッターで物理的にカメラを閉じることができるため、セキュリティも万全なノートパソコンとなっている。
+ <br>サイズは15.6インチとなっておりテンキーがついているのでテンキーがついていてほしい人には便利だろう。しかし、サイズが大きくまた少々重いので持ち運び
+ <br>にはあまり適さない。そこの点だけ注意すればかなり使いやすいパソコンとなるに違いない。
+      
 </html>
