--- a/cl2020.html
+++ b/cl2020.html
@@ -27,6 +27,5 @@
  <br>HDカメラ搭載で、プライバシーシャッターで物理的にカメラを閉じることができるため、セキュリティも万全なノートパソコンとなっている。
  <br>サイズは15.6インチとなっておりテンキーがついているのでテンキーがついていてほしい人には便利だろう。しかし、サイズが大きくまた少々重いので持ち運び
  <br>にはあまり適さない。そこの点だけ注意すればかなり使いやすいパソコンとなるに違いない。
-      
-      
-</html>
+   </body>     
+      </html>
