--- a/cl2020.html
+++ b/cl2020.html
@@ -23,9 +23,9 @@
    <body>
       <h4>ideapadL340とは</h4>
       LenovoL340の特徴としては、仕事もゲームもこの１台でこなせるオールラウンダーということだろう。特にゲーミングに特化しており、高いグラ
- <br>フィック性能と処理能力を兼ね備える、AMD RyzenプロセッサーやSSDを搭載している。また、Dolby Audioステレオスピーカー搭載で、映画や音楽
- <br>鑑賞にもピッタリ、そして、HDカメラ搭載で、プライバシーシャッターで物理的にカメラを閉じることができるため、セキュリティも万全なノート
- <br>パソコンとなっている。サイズは15.6インチとなっておりテンキーがついているのでテンキーがついていてほしい人には便利だろう。しかし、サイ
- <br>ズが大きくまた少々重いので持ち運びにはあまり適さない。そこの点だけ注意すればかなり使いやすいパソコンとなるに違いない。
+ <br>フィック性能と処理能力を兼ね備える、AMD RyzenプロセッサーやSSDを搭載している。また、Dolby Audioステレオスピーカー搭載で、映画や音
+ <br>楽鑑賞にもピッタリ、そして、HDカメラ搭載で、プライバシーシャッターで物理的にカメラを閉じることができるため、セキュリティも万全なノ
+ <br>ートパソコンとなっている。サイズは15.6インチとなっておりテンキーがついているのでテンキーがついていてほしい人には便利だろう。しかし,
+  <br>サイズが大きくまた少々重いので持ち運びにはあまり適さない。そこの点だけ注意すればかなり使いやすいパソコンとなるに違いない。
    </body>     
       </html>
