--- a/cl2020.html
+++ b/cl2020.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h2>Lenovo ideapad L340</h2>
-   最近はじめてパソコンを買った。それがLenovo社のノートパソコン「ideapad L340」である。このパソコンを使ってみて興味を持ったので紹介しようと思う。
+   最近大学の授業のためにはじめてパソコンを買った。それがLenovo社のノートパソコン「ideapad L340」である。このパソコンを使ってみて興味を持ったので紹介しようと思う。
    <br>この機種の画像を下に張り付けておく。
    </body>
 <p>
@@ -27,5 +27,30 @@
  <br>楽鑑賞にもピッタリ、そして、HDカメラ搭載で、プライバシーシャッターで物理的にカメラを閉じることができるため、セキュリティも万全なノ
  <br>ートパソコンとなっている。サイズは15.6インチとなっておりテンキーがついているのでテンキーがついていてほしい人には便利だろう。しかし,
   <br>サイズが大きくまた少々重いので持ち運びにはあまり適さない。そこの点だけ注意すればかなり使いやすいパソコンとなるに違いない。
-   </body>     
-      </html>
+   </body> 
+   <hr>
+   <body>
+      <h5>Lenvo ideapadL340を使ってみての感想</h5>
+      上のように説明されても何もわからない人もいるだろう。なので個人の感想だが参考にしてくれるとありがたい。
+  <br>まず、画面について。画面はかなり綺麗で動画を見てもぬるぬる動くためYouTubeなどの重い動画も見やすい。また、フォートナイトをプレイして
+  <br>みたところ、ラグもなくかくかく動いたりしないのでかなり使いやすい。マインクラフトに関してはプレイしてないのでこのことに関しては申し訳ない。
+  <br>次に、スピーカーについて。スピーカーは両側面についている。わかりにくいと思うので画像を張り付けておく。
+      <p>https://images-na.ssl-images-amazon.com/images/I/41trTnPaOrL._AC_.jpg</p>
+  <br>画像のぶつぶつがあるところがスピーカーだ。音質はよく重低音も聞くことができる。そのため、パソコンで音楽や映画、DVDなどを存分に楽しむ
+  <br>ことができる。
+  <br>最後にキーボードについて。このパソコンのキーボードは「パンダグラフ」を使用しており、初心者がタッチタイピングをするのに適しており、
+  <br>また高速入力も可能です。しかし、キーの取り外しが難しく、無理に外すと壊れてしまう恐れもあるので掃除がしにくいという欠点もある。
+  <br>パソコン初心者の自分にしてみればこのキーボードはかなり使いやすく、タッチタイピングにも適しているが、所々キーが小さく打ちずらいな
+  <br>と感じている。
+   </body>
+  <hr>
+   <body>
+      <h6>まとめ</h6>
+      このLenovo ideapadL340は初心者にも使いやすく、また仕事やゲームにも適しているためまよったれこれ！と言わせんばかりの性能である。
+  <br>しかし、突出した性能はないので、本格的にゲームをしたいならゲーミングパソコン、事務作業を円滑にしたいなら高性能のパソコンを買う
+  <br>ことをおすすめする。
+  <br>今回参考にさせていただいたサイトのページのリンクを乗せておく。このサイトにはほかのLenovoのパソコンも載っているのでLenovoのパソコン
+  <br>を買いたいと思っている人は訪れてみてはどうだろうか。
+      <br>参考にさせていただいたサイト　<a href="https://my-best.com/5896">mybest</a>
+   </body>
+    </html>
