--- a/cl2020.html
+++ b/cl2020.html
@@ -35,7 +35,8 @@
   <br>まず、画面について。画面はかなり綺麗で動画を見てもぬるぬる動くためYouTubeなどの重い動画も見やすい。また、フォートナイトをプレイして
   <br>みたところ、ラグもなくかくかく動いたりしないのでかなり使いやすい。マインクラフトに関してはプレイしてないのでこのことに関しては申し訳ない。
   <br>次に、スピーカーについて。スピーカーは両側面についている。わかりにくいと思うので画像を張り付けておく。
-      <p>https://images-na.ssl-images-amazon.com/images/I/41trTnPaOrL._AC_.jpg</p>
+      <p><img src="https://images-na.ssl-images-amazon.com/images/I/41trTnPaOrL._AC_.jpg">
+         </p>
   <br>画像のぶつぶつがあるところがスピーカーだ。音質はよく重低音も聞くことができる。そのため、パソコンで音楽や映画、DVDなどを存分に楽しむ
   <br>ことができる。
   <br>最後にキーボードについて。このパソコンのキーボードは「パンダグラフ」を使用しており、初心者がタッチタイピングをするのに適しており、
