--- a/cl2020.html
+++ b/cl2020.html
@@ -4,12 +4,9 @@
 </head>
 <body>
 <h2>Lenovo ideapad L340</h2>
-   最近大学の授業のためにはじめてパソコンを買った。それがLenovo社のノートパソコン「ideapad L340」である。このパソコンを使ってみて興味を持ったので紹介しようと思う。
-   <br>この機種の画像を下に張り付けておく。
+   最近大学の授業のためにはじめてパソコンを買った。それがLenovo社のノートパソコン「ideapad L340」である。このパソコンを使ってみて
+   <br>使いやすく初心者にも使いやすくこのパソコンに興味を持ったので紹介しようと思う。
    </body>
-<p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcT7mt5RzvClOopV5Y66DsqFcnuYCx82bLYkHqhlD5Ly5Ym_tcnw&usqp=CAU">
-</p>
    <hr>
    <body>
  <h3>Lenovoとは</h3>
@@ -34,11 +31,9 @@
       上のように説明されても何もわからない人もいるだろう。なので個人の感想だが参考にしてくれるとありがたい。
   <br>まず、画面について。画面はかなり綺麗で動画を見てもぬるぬる動くためYouTubeなどの重い動画も見やすい。また、フォートナイトをプレイして
   <br>みたところ、ラグもなくかくかく動いたりしないのでかなり使いやすい。マインクラフトに関してはプレイしてないのでこのことに関しては申し訳ない。
-  <br>次に、スピーカーについて。スピーカーは両側面についている。わかりにくいと思うので画像を張り付けておく。
-      <p><img src="https://images-na.ssl-images-amazon.com/images/I/41trTnPaOrL._AC_.jpg">
-         </p>
-  <br>画像のぶつぶつがあるところがスピーカーだ。音質はよく重低音も聞くことができる。そのため、パソコンで音楽や映画、DVDなどを存分に楽しむ
-  <br>ことができる。
+  <br>次に、スピーカーについて。スピーカーは両側面についている。ぶつぶつがあるところにサブスピーカー、そして蝶番(?)の部分にメインスピーカーが
+  <br>ついている。音質はよく重低音も聞くことができる。また、サブスピーカーのおかげでYouTubeのイヤホン推奨の動画をもいい音で聞くことができる。
+  <br>そのため、パソコンで様々な動画や音楽、映画、DVDなどを存分に楽しむことができる。
   <br>最後にキーボードについて。このパソコンのキーボードは「パンダグラフ」を使用しており、初心者がタッチタイピングをするのに適しており、
   <br>また高速入力も可能です。しかし、キーの取り外しが難しく、無理に外すと壊れてしまう恐れもあるので掃除がしにくいという欠点もある。
   <br>パソコン初心者の自分にしてみればこのキーボードはかなり使いやすく、タッチタイピングにも適しているが、所々キーが小さく打ちずらいな
